--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
